--- a/apps/api/src/configuration/filters/InkFilter.yaml
+++ b/apps/api/src/configuration/filters/InkFilter.yaml
@@ -1,15 +1,16 @@
 name: InkFilter
 rules:
   - keys: []
-    conditions: []
+    conditions:
+      conditions: []
   - keys:
       - invisible_ink
       - pink_ink
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: laminate
-            operator: in
-            value:
-              - glossy_no_uv
-              - uncoated
+      relationMode: and
+      conditions:
+        - attribute: laminate
+          operator: in
+          value:
+            - glossy_no_uv
+            - uncoated
