--- a/apps/api/src/configuration/filters/SizeFilter.yaml
+++ b/apps/api/src/configuration/filters/SizeFilter.yaml
@@ -10,7 +10,8 @@ rules:
       - 12x5 cm
       - 13x7 cm
       - 15x10 cm
-    conditions: []
+    conditions:
+      conditions: []
 
   - keys:
       - 2" x 1"
@@ -23,32 +24,32 @@ rules:
       - 5" x 3"
       - 8" x 4"
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: true
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: true
 
   - keys:
       - 30x20 cm
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: productName
-            operator: ===
-            value: sheet_legacy
+      relationMode: and
+      conditions:
+        - attribute: productName
+          operator: ===
+          value: sheet_legacy
 
   - keys:
       - 11.8" x 7.9"
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: true
-          - attribute: productName
-            operator: ===
-            value: sheet_legacy
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: true
+        - attribute: productName
+          operator: ===
+          value: sheet_legacy
 
   - keys:
       - 2.5x2.5 cm
@@ -56,11 +57,11 @@ rules:
       - 5.1x2.5 cm
       - 7.7x3.8 cm
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: laminate
-            operator: ===
-            value: epoxy
+      relationMode: and
+      conditions:
+        - attribute: laminate
+          operator: ===
+          value: epoxy
         
   - keys:
       - 1" x 1"
@@ -68,14 +69,14 @@ rules:
       - 2" x 1"
       - 3" x 1.5"
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: laminate
-            operator: ===
-            value: epoxy
-          - attribute: imperial_units
-            operator: ===
-            value: true
+      relationMode: and
+      conditions:
+        - attribute: laminate
+          operator: ===
+          value: epoxy
+        - attribute: imperial_units
+          operator: ===
+          value: true
         
   - keys:
       - 30x15 cm
@@ -85,19 +86,19 @@ rules:
       - 100x70 cm
       - 120x80 cm
     conditions:
-      - relationMode: and
-        conditions:
-          - relationMode: or
-            conditions:
-              - attribute: material
-                operator: ===
-                value: white_wall
-              - attribute: productName
-                operator: ===
-                value: wall
-              - attribute: productName
-                operator: ===
-                value: floor
+      relationMode: and
+      conditions:
+        - relationMode: or
+          conditions:
+            - attribute: material
+              operator: ===
+              value: white_wall
+            - attribute: productName
+              operator: ===
+              value: wall
+            - attribute: productName
+              operator: ===
+              value: floor
 
   - keys:
       - 14" x 7"
@@ -107,75 +108,75 @@ rules:
       - 40" x 20"
       - 46" x 25"
     conditions:
-      - relationMode: and
-        conditions:
-          - relationMode: or
-            conditions:
-              - attribute: material
-                operator: ===
-                value: white_wall
-              - attribute: productName
-                operator: ===
-                value: wall
-              - attribute: productName
-                operator: ===
-                value: floor
-          - relationMode: or
-            conditions:
-              - attribute: imperial_units
-                operator: ===
-                value: true
+      relationMode: and
+      conditions:
+        - relationMode: or
+          conditions:
+            - attribute: material
+              operator: ===
+              value: white_wall
+            - attribute: productName
+              operator: ===
+              value: wall
+            - attribute: productName
+              operator: ===
+              value: floor
+        - relationMode: or
+          conditions:
+            - attribute: imperial_units
+              operator: ===
+              value: true
 
   - keys:
       - US half letter <br> 8.5" x 5.5",
       - A5 paper <br> 5.8" x 8.3",
       - Thank you card <br> 5.1" x 6.4"
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: true
-          - attribute: productName
-            operator: ===
-            value: sheet
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: true
+        - attribute: productName
+          operator: ===
+          value: sheet
 
   - keys:
       - 21.6x14 cm
       - 14.8x21 cm
       - 13x16.3 cm
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: false
-          - attribute: productName
-            operator: ===
-            value: sheet
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: false
+        - attribute: productName
+          operator: ===
+          value: sheet
 
   - keys:
       - 3" x 4"
       - 3.5" x 5"
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: true
-          - attribute: productName
-            operator: ===
-            value: sheet_kiss_cut
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: true
+        - attribute: productName
+          operator: ===
+          value: sheet_kiss_cut
 
   - keys:
       - 7.6x10.1 cm
       - 8.9x12.7 cm
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: imperial_units
-            operator: ===
-            value: false
-          - attribute: productName
-            operator: ===
-            value: sheet_kiss_cut
+      relationMode: and
+      conditions:
+        - attribute: imperial_units
+          operator: ===
+          value: false
+        - attribute: productName
+          operator: ===
+          value: sheet_kiss_cut
