--- a/apps/api/src/configuration/filters/DeliveryFilter.yaml
+++ b/apps/api/src/configuration/filters/DeliveryFilter.yaml
@@ -3,21 +3,21 @@ rules:
   - keys:
       - sheet
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: productName
-            operator: in
-            value:
-              - transfer_decal
-              - 3d_dome
+      relationMode: and
+      conditions:
+        - attribute: productName
+          operator: in
+          value:
+            - transfer_decal
+            - 3d_dome
 
   - keys:
       - single
     conditions:
-      - relationMode: and
-        conditions:  
-          - attribute: productName
-            operator: in
-            value:
-              - sheet
-              - sheet_kiss_cut
+      relationMode: and
+      conditions:  
+        - attribute: productName
+          operator: in
+          value:
+            - sheet
+            - sheet_kiss_cut
