--- a/apps/api/src/configuration/filters/FixedSizeFilter.yaml
+++ b/apps/api/src/configuration/filters/FixedSizeFilter.yaml
@@ -3,21 +3,21 @@ rules:
   - keys: 
       - true
     conditions:
-      - relationMode: and
-        conditions:
-          - attribute: reseller
-            operator: not_in
-            value:
-              - stickersthatstick
-              - stickit
-          - relationMode: or
-            conditions:
-              - attribute: productName
-                operator: in
-                value:
-                  - 3d_dome
-                  - sheet_legacy
-              - attribute: laminate
-                operator: in
-                value:
-                  - epoxy
+      relationMode: and
+      conditions:
+        - attribute: reseller
+          operator: not_in
+          value:
+            - stickersthatstick
+            - stickit
+        - relationMode: or
+          conditions:
+            - attribute: productName
+              operator: in
+              value:
+                - 3d_dome
+                - sheet_legacy
+            - attribute: laminate
+              operator: in
+              value:
+                - epoxy
