--- a/apps/api/src/configuration/services/stickerapp.yaml
+++ b/apps/api/src/configuration/services/stickerapp.yaml
@@ -7,6 +7,8 @@ families:
   - sticker-custom
 #   - promo
 #   - fee
+collections:
+  - sticker_wizard_filters
 attributes:
   - sheet_type
   - sheet_name
