--- a/apps/api/src/configuration/attribute-information/material.yaml
+++ b/apps/api/src/configuration/attribute-information/material.yaml
@@ -1,146 +1,146 @@
 name: material
-attributes:
+values:
   white:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   white_removable:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   white_hi_tack:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   white_wall:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   white_sturdy:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   white_thin:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   paper_thin:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/06/08/4d0ae46e9e164daa9171d70e51cd46c7acaa2419.png"
     available: true
   clear:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/2d46e2873ec899b83a152c2f2ad52c1368398333.png"
     available: true
   clear_thin:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/2d46e2873ec899b83a152c2f2ad52c1368398333.png"
     available: true
   kraft_paper:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/e4ae8c4973e6e530cedcce836d8366638ca4c6d3.png"
     available: true
   kraft_thin:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/e4ae8c4973e6e530cedcce836d8366638ca4c6d3.png"
     available: true
   mirror:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/c5e0f009dbf3aec33b2e8d0caac5ebcd1a10348f.png"
     available: true
   silver_thin:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/c5e0f009dbf3aec33b2e8d0caac5ebcd1a10348f.png"
     available: true
   prismatic:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/0912457c4dccf212c92e0802fd36545d90f2bfd6.png"
     available: true
   holographic:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/48e2c5c8c6ab57d013675b3b245daa2136e0c7cf.png"
     available: true
   glitter:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/8d48777356c014861f8e174949f2a382778c0a7e.png"
     available: true
   brushed_alloy:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/573a155499c9496b21c3f404bffb6499ae99462e.png"
     available: true
   gitd:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/03/09/c23d3c3023560c21da44135bd142dc04affa380e.png"
     available: true
   pixie_dust:
-    icon:
+    images:
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/attachment/2023/08/23/46dac2bd418951b1412d4225cbdaad579aed03e4.png"
     available: true
   warranty:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: false
   clear_backscore:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: false
   white_coverall:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true 
   white_paper:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   white_backscore:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   bubble_free:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   skin:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   colored_vinyl:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   metallic_gold:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   metallic_silver:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   frosted:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   fluorescent:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   magnetic:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   satin_matte:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   reflective:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   heat_transfer:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
   special:
-    icon: 
+    images: 
       wizard: "https://d6ce0no7ktiq.cloudfront.net/images/web/wizard/ic_wiz-placeholder.png"
     available: true
