Add support for resolving other attribute values

--- a/apps/api/src/configuration/constraints/ProductionLineConstraint.yaml
+++ b/apps/api/src/configuration/constraints/ProductionLineConstraint.yaml
@@ -51,4 +51,4 @@ rules:
       conditions:
         - attribute: material
           operator: EQUAL
-          value: "{special}"
+          value: "{ProductionLines.SPECIAL}"
