--- a/apps/api/src/configuration/constraints/MinSizeConstraint.yaml
+++ b/apps/api/src/configuration/constraints/MinSizeConstraint.yaml
@@ -8,5 +8,5 @@ rules:
         - attribute: productName
           operator: IN
           value:
-            - "{CustomStickerFamily.PRODUCT_WALL}"
-            - "{CustomStickerFamily.PRODUCT_FLOOR}"
+            - "{ProductNames.PRODUCT_WALL}"
+            - "{ProductNames.PRODUCT_FLOOR}"
