Add asset to family config

--- a/apps/api/src/configuration/families/sticker-custom.yaml
+++ b/apps/api/src/configuration/families/sticker-custom.yaml
@@ -75,6 +75,7 @@ rules:
     min_units: StickerSquareMeterMinimumUnitValues
     price_provider: sticker_rate_lists
     quantity_provider: sticker_quantity_lists
+    asset: sticker_assets
 template: |
   {{name}}
   {{material}} / {{laminate}}
