Fix StickerSquareMeterMinimumUnitValues config

--- a/apps/api/src/configuration/min-units/StickerSquareMeterMinimumUnitValues.yaml
+++ b/apps/api/src/configuration/min-units/StickerSquareMeterMinimumUnitValues.yaml
@@ -5,75 +5,75 @@ rules:
     conditions:
       baseComplexityScore: 120
       conditions:
-        - attribute: reseller
+        - attribute: item.attributes.reseller
           operator: IN
-          value: [STICKERSTHATSTICK]
+          value: [stickersthatstick]
   - keys: 1.8
     conditions:
       baseComplexityScore: 120
       conditions:
-        - attribute: reseller
+        - attribute: item.attributes.reseller
           operator: IN
-          value: [STICKIT]
+          value: [stickit]
   - keys: 5
     conditions:
       baseComplexityScore: 120
       relationMode: AND
       conditions:
-        - attribute: reseller
+        - attribute: item.attributes.reseller
           operator: IN
-          value: [STICKERSTHATSTICK, STICKIT]
+          value: [stickersthatstick, stickit]
         - attribute: material
           operator: EQUAL
-          value: WHITE_THIN
+          value: white_thin
   - keys: 0.1090
     conditions:
       baseComplexityScore: 1
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: IN
-          value: [HOLOGRAPHIC, GLITTER, MIRROR, PRISMATIC, PIXIE_DUST]
+          value: [holographic, glitter, mirror, prismatic, pixie_dust]
   - keys: 0.1360
     conditions:
       baseComplexityScore: 1
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: IN
-          value: [WHITE_HI_TACK]
+          value: [white_hi_tack]
   - keys: 0.1635
     conditions:
       baseComplexityScore: 1
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: IN
-          value: [GITD]
+          value: [gitd]
   - keys: 0.1440
     conditions:
       baseComplexityScore: 1
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: IN
-          value: [CLEAR]
-        - attribute: productName
-          operator: NOT_EQUAL
-          value: PRODUCT_LABELS_ON_SHEET
+          value: [clear]
+        - attribute: item.productName
+          operator: "!=="
+          value: ProductNames.PRODUCT_LABELS_ON_SHEET
   - keys: 0.35
     conditions:
       baseComplexityScore: 1
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: IN
-          value: [WHITE_WALL]
+          value: [white_wall]
   - keys: 0.058
     conditions:
       conditions:
-        - attribute: laminate
-          operator: EQUAL
-          value: EPOXY
+        - attribute: item.attributes.laminate
+          operator: ===
+          value: epoxy
   - keys: 0.06
     conditions:
       baseComplexityScore: 10
       conditions:
-        - attribute: productName
-          operator: EQUAL
-          value: PRODUCT_SHEET_LEGACY
+        - attribute: item.productName
+          operator: ===
+          value: ProductNames.PRODUCT_SHEET_LEGACY
